@@ -463,6 +463,7 @@ elm_thumb.c \
 elm_toolbar.c \
 elm_transit.c \
 elm_util.c \
+elm_url.c \
 elm_video.c \
 elm_web.c \
 elm_web2.c \
