@@ -450,6 +450,18 @@ void                *_elm_icon_signal_callback_del(Evas_Object *obj,
                                                    Edje_Signal_Cb func_cb);
 /* end of DEPRECATED */
 
+
+/* Elm helper to download content */
+typedef struct _Elm_Url Elm_Url;
+
+typedef void (*Elm_Url_Done)(void *data, Elm_Url *url, Eina_Binbuf *download);
+typedef void (*Elm_Url_Cancel)(void *data, Elm_Url *url, int error);
+typedef void (*Elm_Url_Progress)(void *data, Elm_Url *url, double now, double total);
+
+Elm_Url *elm_url_download(const char *url, Elm_Url_Done done_cb, Elm_Url_Cancel cancel_cb, Elm_Url_Progress progress_cb, const void *data);
+void elm_url_cancel(Elm_Url *r);
+const char *elm_url_get(Elm_Url *r);
+
 extern char *_elm_appname;
 extern Elm_Config *_elm_config;
 extern const char *_elm_data_dir;
